--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <body>
     <%= render 'home/header' %>
     <div class = "container">
+      <%= render 'layouts/alerts' %>
       <%= yield %>
     </div>
   </body>
