--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -23,21 +23,26 @@
                 <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
             </li>
 
-            <li class="nav-item">
-                <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
-            </li>
+            <% if current_user %>
+                <li class="nav-item">
+                    <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %>
+                </li>
 
-            <li class="nav-item">
-                <%= link_to 'Log In', new_user_session_path, class: 'nav-link' %>
-            </li>
+                <li class="nav-item">
+                    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                </li>
 
-            <li class="nav-item">
-                <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %>
-            </li>
+                <% else %>
 
-            <li class="nav-item">
-                <%= button_to 'Log Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
+                <li class="nav-item">
+                    <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                    <%= link_to 'Log In', new_user_session_path, class: 'nav-link' %>
+                </li>
+
+            <% end %>
         
         </ul>
 
