--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,2 +1,16 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% type = "info" if local_assigns[:type].nil? %>
+<% title = "" if local_assigns[:title].nil? %>
+<% content = "content" if local_assigns[:content].nil? %>
+<% dismissible = true if local_assigns[:dismissible].nil? %>
+
+<% flash.each do |type, content| %>
+    <div class="alert <%= alert_class_by_type(type) %> <% if dismissible == true %>alert-dismissible<%
+        end %>" role="alert">
+        <% if dismissible == true %>
+            <button type="button" class="close" data-bs-dismiss="alert"><span aria-hidden="true">&times</span
+            ><span class="sr-only">Close</span></button>
+        <% end %>
+        <strong><%= title %></strong>
+        <%= content %>
+    </div>
+<% end %>
