--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,13 +19,23 @@
                 <%= link_to 'Products', products_path, class: 'nav-link' %>
             </li>
 
-            <li class="nav-item">
-                <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
-            </li>
+            <% if current_user && current_user.admin? %>
+                <li class="nav-item">
+                    <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
+                </li>
 
-            <% if current_user %>
+                <li class="nav-item">
+                    <%= link_to 'Users', users_path, class: 'nav-link' %>
+                </li>
+            <% end %>
+
+            <% if user_signed_in? %>
                 <li class="nav-item">
                     <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %>
+                </li>
+
+                <li class="nav-item">
+                    <%= link_to 'View Profile', user_path(current_user), class: 'nav-link' %>
                 </li>
 
                 <li class="nav-item">
@@ -41,7 +51,6 @@
                 <li class="nav-item">
                     <%= link_to 'Log In', new_user_session_path, class: 'nav-link' %>
                 </li>
-
             <% end %>
         
         </ul>
