--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -31,7 +31,7 @@
 
             <% if user_signed_in? %>
                 <li class="nav-item">
-                    <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link' %>
+                    <%= link_to 'Edit Account', edit_user_registration_path, class: 'nav-link' %>
                 </li>
 
                 <li class="nav-item">
