--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,13 +2,27 @@
 
 <h1>Products</h1>
 
-<div id="products">
+
   <% @products.each do |product| %>
-    <%= render product %>
-    <p>
-      <%= link_to "Show this product", product %>
-    </p>
+    <div class="card">
+      <%= image_tag("products/#{product.image_filename}") %>
+
+      <h1>
+        <%= product.product_name %>
+      </h1>
+      <p class="price">
+        <%= product.net_price %>
+      </p>
+      <p>
+        <%= product.product_description %>
+      </p>
+      <p>
+        <button>
+          <%= link_to "Show this product", product %>
+        </button>
+      </p>
+    </div>
   <% end %>
-</div>
+
 
 <%= link_to "New product", new_product_path %>
