--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -2,7 +2,7 @@
   <% @entries.each do |entry| %>
     <div class="panel panel-default">
       <div class="panel-body">
-        <%= link_to entry.title, entry %> - <i> published <%= time_ago_in_words(entry.published) %> ago.</i>
+        <%= link_to entry.title, entry %> - <i> content: <%= entry.content %> </i>
       </div>
     </div>
   <% end %>
