--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h3><%= link_to @entry.title, @entry.url %></h3>
-  <i>published on <%= @entry.published %> by <%= @entry.author %></i>
+  <i>Author: <%= @entry.author %></i>
   <p>
     <%= @entry.content.html_safe %>
   </p>
