--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,6 +19,10 @@
                 <%= link_to 'Products', products_path, class: 'nav-link' %>
             </li>
 
+            <li class="nav-item">
+              <%= link_to 'Inspire Me', feeds_path, class: 'nav-link' %>
+            </li>
+
             <% if current_user && current_user.admin? %>
                 <li class="nav-item">
                     <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
