--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,3 +8,9 @@
 
   <%= button_to "Destroy this product", @product, method: :delete %>
 </div>
+<p>currently @product.id <%= p @product.id %></p>
+<%= form_tag order_items_path do %>
+  <%= hidden_field_tag :product_id, @product.id %>
+  <%= number_field_tag :quantity, 1 %>
+  <%= submit_tag "Add to Cart" %>
+<% end %>
