added cart and checkout functionality

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -60,6 +60,10 @@
                     <%= link_to 'Log In', new_user_session_path, class: 'nav-link' %>
                 </li>
             <% end %>
+
+          <li class="nav-item">
+            <%= link_to 'Cart', cart_path, class: 'nav-link' %>
+          </li>
         
         </ul>
 
