--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -1,5 +1,15 @@
 <h2>Current Cart</h2>
 
+<p>
+  <%= link_to "Home", root_path %>
+</p>
+<p>
+  <%= link_to "Continue Shopping", products_path %>
+</p>
+<p>
+  <%= link_to pluralize(current_cart.items_count, 'item'), cart_path %>
+</p>
+
 <table>
   <thead>
   <tr>
@@ -12,7 +22,7 @@
   <tbody>
   <% @items.each do |item| %>
     <tr>
-      <td><%= item.product.title %></td>
+      <td><%= item.product.product_name %></td>
       <td><%= number_to_currency item.price %></td>
       <td><%= item.quantity %></td>
       <td>
@@ -23,4 +33,11 @@
     </tr>
   <% end %>
   </tbody>
+  <tfoot>
+    <td colspan="4" align="right">
+      <%= number_to_currency current_cart.sub_total %>
+    </td>
+  </tfoot>
 </table>
+
+<%= link_to 'Checkout', checkout_path %>
