--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,20 @@
-<h1>New order</h1>
+<h1>Checkout</h1>
 
-<%= render "form", order: @order %>
+<%= form_for @order, url: checkout_path do |f| %>
+
+  <div class="form-group">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div>
+
+  <%= f.submit 'Checkout' %>
+
+<% end %>
 
 <br>
 
