--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -23,32 +23,42 @@
               <%= link_to 'Inspire Me', feeds_path, class: 'nav-link' %>
             </li>
 
-          <li class="nav-item">
-            <%= link_to 'Product Categories', categories_path, class: 'nav-link' %>
-          </li>
+            <li class="nav-item">
+              <%= link_to 'Product Categories', categories_path, class: 'nav-link' %>
+            </li>
 
             <% if current_user && current_user.admin? %>
-                <li class="nav-item">
-                    <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
-                </li>
+              <li class="nav-item">
+                  <%= link_to 'Add New Product', new_product_path, class: 'nav-link' %>
+              </li>
 
-                <li class="nav-item">
-                    <%= link_to 'Users', users_path, class: 'nav-link' %>
-                </li>
+              <li class="nav-item">
+                  <%= link_to 'Users', users_path, class: 'nav-link' %>
+              </li>
             <% end %>
 
             <% if user_signed_in? %>
+              <% if current_user.profile == nil %>
                 <li class="nav-item">
-                    <%= link_to 'Edit Account', edit_user_registration_path, class: 'nav-link' %>
+                  <%= link_to 'Create Profile', new_profile_path, class: 'nav-link' %>
                 </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to 'View Profile', current_user.profile, class: 'nav-link' %>
+                </li>
+              <% end %>
 
-                <li class="nav-item">
-                    <%= link_to 'View Profile', user_path(current_user), class: 'nav-link' %>
-                </li>
+              <li class="nav-item">
+                  <%= link_to 'Account Settings', edit_user_registration_path, class: 'nav-link' %>
+              </li>
 
-                <li class="nav-item">
-                    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link' %>
-                </li>
+              <li class="nav-item">
+                  <%= link_to 'Account Details', user_path(current_user), class: 'nav-link' %>
+              </li>
+
+              <li class="nav-item">
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              </li>
 
                 <% else %>
 
