added decorator pattern and product_category scaffold

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,7 @@
 <ol>
   <% @categories.each do |category| %>
   <li>
-    <%= link_to category_products_path(category) do %>
+    <%= link_to category do %>
       <%= category.title %>
       (<%= category.products.count %> product(s))
     <% end %>
