--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -1,4 +1,10 @@
 <div id="<%= dom_id feed %>">
+
+  <p>
+    <strong>ID:</strong>
+    <%= feed.id %>
+  </p>
+
   <p>
     <strong>Name:</strong>
     <%= feed.name %>
