--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -20,7 +20,11 @@
             </li>
 
             <li class="nav-item">
-              <%= link_to 'Inspire Me', feeds_path, class: 'nav-link' %>
+              <%= link_to 'Feeds', feeds_path, class: 'nav-link' %>
+            </li>
+
+            <li class="nav-item">
+              <%= link_to 'Inspire Me', entries_index_path, class: 'nav-link' %>
             </li>
 
             <li class="nav-item">
