--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
 
     <div class="actions">
         <%= form.submit class: 'btn btn-primary' %>
-        <%= link_to 'Cancel', users_path, class: 'btn btn-secondary' %>
+        <%= link_to 'Cancel', user_path(@user.id), class: 'btn btn-secondary' %>
     </div>
 
 <% end %>
