added observer classes

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
+<%= link_to "Assign product to category", product_categories_path %>
+
 <h1>Categories (<%= @categories.count %>)</h1>
 
 <div id="categories">
