--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -37,6 +37,9 @@
     <td colspan="4" align="right">
       <%= number_to_currency current_cart.sub_total %>
     </td>
+    <td colspan="4" align="right">
+      <%= number_to_currency current_cart.total %>
+    </td>
   </tfoot>
 </table>
 
