--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Users</h1>
 <table style="width:100%">
-  <tr>
-    <th colspan="5">Registered Users</th>
-  </tr>
+<!--  <tr>-->
+<!--    <th colspan="10">Registered Users</th>-->
+<!--  </tr>-->
   <tr>
     <th>ID</th>
     <th>Email</th>
