--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,30 +1,40 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 20%;
-    height: 100%;
-    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+    height: 500px;
+    margin: 10px;
     text-align: center;
     font-family: arial;
     float: left;
+    border-radius: 5px;
 }
   
 .price {
     color: grey;
     font-size: 22px;
+    height: 25px;
+}
+
+.card img {
+    height: 200px;
 }
 
 .card button {
     border: none;
     outline: 0;
     padding: 12px;
-    color: white;
-    background-color: #000;
+    color: purple;
+    background-color: none;
     text-align: center;
     cursor: pointer;
     width: 100%;
     font-size: 18px;
+    text-decoration: none;
 }
 
 .card button:hover {
     opacity: 0.7;
+    text-decoration: none;
 }
