--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,8 +1,10 @@
-
+<h1>
+  Feed Entries
+</h1>
 <table style="width:100%">
-  <tr>
-    <th colspan="5">Feed Entries</th>
-  </tr>
+<!--  <tr>-->
+<!--    <th colspan="6">Feed Entries</th>-->
+<!--  </tr>-->
   <tr>
     <th>Entry ID</th>
     <th>Entry Title</th>
