--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,14 +1,54 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Orders</h1>
-
-<div id="orders">
+<table style="width:100%">
+<!--  <tr>-->
+<!--    <th colspan="10">Orders List</th>-->
+<!--  </tr>-->
+  <tr>
+    <th>ID</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Sub Total</th>
+    <th>Total</th>
+    <th>Status</th>
+    <th>User ID</th>
+    <th>Created On</th>
+    <th>Last Updated</th>
+    <th>View</th>
+  </tr>
   <% @orders.each do |order| %>
-    <%= render order %>
-    <p>
-      <%= link_to "Show this order", order %>
-    </p>
+    <tr>
+      <td>
+        <%= order.id %>
+      </td>
+      <td>
+        <%= order.first_name %>
+      </td>
+      <td>
+        <%= order.last_name %>
+      </td>
+      <td>
+        <%= order.sub_total %>
+      </td>
+      <td>
+        <%= order.total %>
+      </td>
+      <td>
+        <%= order.status %>
+      </td>
+      <td>
+        <%= order.user_id %>
+      </td>
+      <td>
+        <%= order.created_at %>
+      </td>
+      <td>
+        <%= order.updated_at %>
+      </td>
+      <td>
+        <%= link_to "Show this order", order %>
+      </td>
+    </tr>
   <% end %>
-</div>
-
-<%= link_to "New order", new_order_path %>
+</table>
