--- a/app/views/profiles/_activity_log.html.erb
+++ b/app/views/profiles/_activity_log.html.erb
@@ -1,7 +1,7 @@
 <table style="width:100%">
-  <tr>
-    <th colspan="5">Activity Log</th>
-  </tr>
+<!--  <tr>-->
+<!--    <th colspan="6">Activity Log</th>-->
+<!--  </tr>-->
   <tr>
     <th>Date/Time</th>
     <th>Object</th>
