--- a/app/views/profiles/_tracking.html.erb
+++ b/app/views/profiles/_tracking.html.erb
@@ -1,7 +1,7 @@
 <table style="width:100%">
-  <tr>
-    <th colspan="5">User Login Information</th>
-  </tr>
+<!--  <tr>-->
+<!--    <th colspan="5">User Login Information</th>-->
+<!--  </tr>-->
   <tr>
     <th>Sign In Count</th>
     <th>Current Sign In At</th>
