--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="app/assets/stylesheets/style.css">
+    <link rel="stylesheet" href="app/assets/stylesheets/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <title>eCommerceApp</title>
