--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,47 @@
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <h2>Sign Up</h2>
 
-    <h1 class="text-center">Sign Up</h1>
-    <hr>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+  <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-user-plus" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: false, class: 'form-control' %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+        <form class="w3-container">
+          <div class="w3-section">
+
+            <div class="form-group w3-padding">
+              <label class="w3-left"><b>Email</b></label>
+              <%= f.email_field :email, autofocus: false, class: 'form-control w3-input w3-border w3-margin-bottom' %>
+            </div>
+
+            <div class="form-group w3-padding">
+              <label class="w3-left"><b>Password   </b></label>
+              <% if @minimum_password_length %>
+                <em class="w3-left">(<%=  @minimum_password_length %> characters minimum)</em>
+              <% end %><br>
+              <%= f.password_field :password, autocomplete: "off", class: 'form-control w3-input w3-border' %>
+            </div>
+
+            <div class="form-group w3-padding">
+              <label class="w3-left"><b>Password Confirmation</b></label>
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control w3-input w3-border' %>
+            </div>
+
+            <div class="form-group w3-padding">
+              <%= f.submit "Sign Up", class: "w3-button w3-green w3-block w3-section w3-padding" %>
+            </div>
+
+          </div>
+        </form>
+      <% end %>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= render "devise/shared/links" %>
       </div>
 
-      <div class="form-group">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-primary btn-block btn-lg" %>
-      </div>
-    <% end %>
-    <div class="text-center">
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
