--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,20 @@
+<!--@Ref: https://www.w3schools.com/w3css/w3css_alerts.asp
+Reference Description: W3 Templates for web pages alerts using W3.CSS Bootstrap -->
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
+  <div id="error_explanation" class="w3-panel w3-blue w3-display-container w3-round-large w3-margin">
+  <span onclick="this.parentElement.style.display='none'"
+        class="w3-button w3-large w3-display-topright">&times;</span>
+    <h3>
       <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+                         count: resource.errors.count,
+                         resource: resource.class.model_name.human.downcase)%>
+    </h3>
+    <p>
+      <ul class="w3-ul">
+        <% resource.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </p>
   </div>
 <% end %>
